[package]
name = "rust_api_access"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"  # Para manipulação de datas
dotenv = "0.15"  # Para carregar variáveis de ambiente

